<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="projects.aleksi.ristinolla.ScoresFragment">


    <Button
        android:id="@+id/button14"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="40dp"
        android:layout_marginLeft="50dp"
        android:text="@string/previous"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/helpposcores"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="70dp" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/normaaliscores"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginTop="100dp"
        app:layout_constraintTop_toBottomOf="@+id/textView2" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/vaikeascores"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginTop="100dp"
        app:layout_constraintTop_toBottomOf="@+id/textView3" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/alltimewins"
        app:layout_constraintLeft_toRightOf="@+id/textView2"
        android:layout_marginLeft="15dp"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="30dp" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/alltimelosses"
        android:layout_marginTop="15dp"
        app:layout_constraintTop_toBottomOf="@+id/textView5"
        app:layout_constraintLeft_toRightOf="@+id/textView2"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="30dp" />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/alltimewins"
        app:layout_constraintLeft_toRightOf="@+id/textView3"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="40dp"
        app:layout_constraintTop_toBottomOf="@+id/textView11" />

    <TextView
        android:id="@+id/textView8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/alltimelosses"
        app:layout_constraintLeft_toRightOf="@+id/textView3"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="15dp"
        app:layout_constraintTop_toBottomOf="@+id/textView7" />

    <TextView
        android:id="@+id/textView9"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/alltimewins"
        android:layout_marginTop="45dp"
        app:layout_constraintTop_toBottomOf="@+id/textView12"
        app:layout_constraintLeft_toRightOf="@+id/textView4"
        android:layout_marginLeft="10dp" />

    <TextView
        android:id="@+id/textView10"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/alltimelosses"
        android:layout_marginTop="15dp"
        app:layout_constraintTop_toBottomOf="@+id/textView9"
        app:layout_constraintLeft_toRightOf="@+id/textView4"
        android:layout_marginLeft="10dp" />

    <TextView
        android:id="@+id/textView11"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="15dp"
        android:layout_marginTop="15dp"
        android:text="@string/draw"
        app:layout_constraintLeft_toRightOf="@+id/textView2"
        app:layout_constraintTop_toBottomOf="@+id/textView6" />

    <TextView
        android:id="@+id/textView12"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="15dp"
        android:text="@string/draw"
        app:layout_constraintLeft_toRightOf="@+id/textView3"
        app:layout_constraintTop_toBottomOf="@+id/textView8" />

    <TextView
        android:id="@+id/textView13"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="15dp"
        android:text="@string/draw"
        app:layout_constraintLeft_toRightOf="@+id/textView4"
        app:layout_constraintTop_toBottomOf="@+id/textView10" />

    <TextView
        android:id="@+id/totalEasyWins"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginRight="55dp"
        android:text="@string/easywins"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="30dp" />

    <TextView
        android:id="@+id/totalEasyLosses"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginRight="55dp"
        android:layout_marginTop="15dp"
        android:text="@string/easylosses"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/totalEasyWins" />

    <TextView
        android:id="@+id/easyDraw"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginRight="55dp"
        android:layout_marginTop="15dp"
        android:text="@string/easydraw"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/totalEasyLosses" />

    <Button
        android:id="@+id/button16"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="40dp"
        android:layout_marginLeft="90dp"
        android:text="@string/resetDB"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toRightOf="@+id/button14" />

    <TextView
        android:id="@+id/totalNormalWins"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginRight="55dp"
        android:layout_marginTop="40dp"
        android:text="@string/normalwins"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/easyDraw" />

    <TextView
        android:id="@+id/totalNormalLosses"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginRight="55dp"
        android:layout_marginTop="15dp"
        android:text="@string/normallosses"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/totalNormalWins" />

    <TextView
        android:id="@+id/normalDraw"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginRight="55dp"
        android:layout_marginTop="15dp"
        android:text="@string/normaldraw"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/totalNormalLosses" />

    <TextView
        android:id="@+id/totalHardWins"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginRight="55dp"
        android:layout_marginTop="44dp"
        android:text="@string/hardwins"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/normalDraw" />

    <TextView
        android:id="@+id/totalHardLosses"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginRight="55dp"
        android:layout_marginTop="15dp"
        android:text="@string/hardlosses"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/totalHardWins" />

    <TextView
        android:id="@+id/hardDraw"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginRight="55dp"
        android:layout_marginTop="15dp"
        android:text="@string/harddraw"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/totalHardLosses" />
</android.support.constraint.ConstraintLayout>
